Bug 463911 - Blink cursor : the character behind also blinks
Summary: Blink cursor : the character behind also blinks
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-06 07:51 UTC by marav
Modified: 2023-01-23 22:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description marav 2023-01-06 07:51:52 UTC
When the cursor is set to :

shape: block
color: match current character
blinking enable

and move the cursor to a character ( shell or with an editor - vim or nano)

The character behind the cursor also blinks 

Looking at the changelog, I don't see this as a new feature or expected behavior
Comment 1 Bug Janitor Service 2023-01-07 19:27:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/802
Comment 2 Shmerl 2023-01-09 03:47:58 UTC
I can confirm that patch fixes the bug (tested applying it for konsole 22.12.1).
Comment 3 Kurt Hindenburg 2023-01-23 22:52:09 UTC
Git commit d0d1dcda8187596dc63001de7e75b25fe57e3da7 by Kurt Hindenburg, on behalf of Matan Ziv-Av.
Committed on 23/01/2023 at 21:55.
Pushed by hindenburg into branch 'master'.

When the cursor is blinking and off, do not reverse text color

M  +1    -1    src/terminalDisplay/TerminalPainter.cpp

https://invent.kde.org/utilities/konsole/commit/d0d1dcda8187596dc63001de7e75b25fe57e3da7