When the cursor is blinking and off, do not reverse text color

BUG: 463911